chore(cdk): bundle non-public cdk dependencies
yarn-cfn, region-info and cloudformation-diff are not going to public
packages in v2.

Bundle them up as part of the `aws-cdk` package.

--- a/package.json
+++ b/package.json
@@ -95,6 +95,12 @@
       "aws-cdk-lib/semver/**",
       "aws-cdk-lib/yaml",
       "aws-cdk-lib/yaml/**",
+      "aws-cdk/@aws-cdk/cloudformation-diff",
+      "aws-cdk/@aws-cdk/cloudformation-diff/**",
+      "aws-cdk/@aws-cdk/region-info",
+      "aws-cdk/@aws-cdk/region-info/**",
+      "aws-cdk/@aws-cdk/yaml-cfn",
+      "aws-cdk/@aws-cdk/yaml-cfn/**",
       "monocdk/@balena/dockerignore",
       "monocdk/@balena/dockerignore/**",
       "monocdk/case",
