Promoting the package to stable

--- a/packages/@aws-cdk-containers/ecs-service-extensions/package.json
+++ b/packages/@aws-cdk-containers/ecs-service-extensions/package.json
@@ -99,6 +99,6 @@
   "awscdkio": {
     "announce": false
   },
-  "maturity": "experimental",
-  "stability": "experimental"
+  "maturity": "stable",
+  "stability": "stable"
 }
