--- a/tools/pkglint/package.json
+++ b/tools/pkglint/package.json
@@ -47,6 +47,7 @@
     "colors": "^1.4.0",
     "fs-extra": "^9.0.1",
     "glob": "^7.1.6",
+    "npm-bundled": "^1.1.1",
     "semver": "^7.3.2",
     "yargs": "^16.1.0"
   }
