chore(ubergen): exclude cx-api and cloud-assembly-schema
The cx-api and cloud-assembly-schema packages define protocol between
the CDK framework and the CDK CLI.

With v2, they need to be published as public packages. The CLI will consume
them as regular dependencies, and the framework package, aws-cdk-lib, will
have them bundled.

--- a/packages/monocdk/package.json
+++ b/packages/monocdk/package.json
@@ -77,25 +77,25 @@
   },
   "license": "Apache-2.0",
   "bundledDependencies": [
+    "@aws-cdk/cloud-assembly-schema",
+    "@aws-cdk/cx-api",
     "@balena/dockerignore",
     "case",
     "fs-extra",
     "ignore",
-    "jsonschema",
     "minimatch",
     "punycode",
-    "semver",
     "yaml"
   ],
   "dependencies": {
+    "@aws-cdk/cloud-assembly-schema": "0.0.0",
+    "@aws-cdk/cx-api": "0.0.0",
     "@balena/dockerignore": "^1.0.2",
     "case": "1.6.3",
     "fs-extra": "^9.0.1",
     "ignore": "^5.1.8",
-    "jsonschema": "^1.4.0",
     "minimatch": "^3.0.4",
     "punycode": "^2.1.1",
-    "semver": "^7.3.2",
     "yaml": "1.10.0"
   },
   "devDependencies": {
@@ -255,11 +255,9 @@
     "@aws-cdk/aws-wafregional": "0.0.0",
     "@aws-cdk/aws-wafv2": "0.0.0",
     "@aws-cdk/aws-workspaces": "0.0.0",
-    "@aws-cdk/cloud-assembly-schema": "0.0.0",
     "@aws-cdk/cloudformation-include": "0.0.0",
     "@aws-cdk/core": "0.0.0",
     "@aws-cdk/custom-resources": "0.0.0",
-    "@aws-cdk/cx-api": "0.0.0",
     "@aws-cdk/pipelines": "0.0.0",
     "@aws-cdk/region-info": "0.0.0",
     "@aws-cdk/yaml-cfn": "0.0.0",
