vendor in patched version of rosetta (TEMPORARY, as a way to 'prove it works')

--- a/packages/@aws-cdk/core/package.json
+++ b/packages/@aws-cdk/core/package.json
@@ -186,11 +186,11 @@
     "@aws-cdk/cloud-assembly-schema": "0.0.0",
     "@aws-cdk/cx-api": "0.0.0",
     "@aws-cdk/region-info": "0.0.0",
+    "@balena/dockerignore": "^1.0.2",
     "constructs": "^3.2.0",
     "fs-extra": "^9.0.1",
-    "minimatch": "^3.0.4",
-    "@balena/dockerignore": "^1.0.2",
-    "ignore": "^5.1.8"
+    "ignore": "^5.1.8",
+    "minimatch": "^3.0.4"
   },
   "bundledDependencies": [
     "fs-extra",
@@ -202,8 +202,8 @@
   "peerDependencies": {
     "@aws-cdk/cloud-assembly-schema": "0.0.0",
     "@aws-cdk/cx-api": "0.0.0",
-    "constructs": "^3.2.0",
-    "@aws-cdk/region-info": "0.0.0"
+    "@aws-cdk/region-info": "0.0.0",
+    "constructs": "^3.2.0"
   },
   "engines": {
     "node": ">= 10.13.0 <13 || >=13.7.0"
