--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   },
   "resolutions-comment": "should be removed or reviewed when nodeunit dependency is dropped or adjusted",
   "resolutions": {
-    "tap-mocha-reporter": "^5.0.1"
+    "tap-mocha-reporter": "^5.0.1",
+    "jsii-rosetta": "file:vendor/jsii-rosetta.tgz",
+    "jsii-rosetta/@jsii/spec": "file:vendor/jsii-spec.tgz"
   },
   "repository": {
     "type": "git",
