--- a/packages/@aws-cdk/aws-lambda/package.json
+++ b/packages/@aws-cdk/aws-lambda/package.json
@@ -91,6 +91,8 @@
     "@aws-cdk/aws-cloudwatch": "0.0.0",
     "@aws-cdk/aws-codeguruprofiler": "0.0.0",
     "@aws-cdk/aws-ec2": "0.0.0",
+    "@aws-cdk/aws-ecr": "0.0.0",
+    "@aws-cdk/aws-ecr-assets": "0.0.0",
     "@aws-cdk/aws-efs": "0.0.0",
     "@aws-cdk/aws-events": "0.0.0",
     "@aws-cdk/aws-iam": "0.0.0",
@@ -108,6 +110,8 @@
     "@aws-cdk/aws-cloudwatch": "0.0.0",
     "@aws-cdk/aws-codeguruprofiler": "0.0.0",
     "@aws-cdk/aws-ec2": "0.0.0",
+    "@aws-cdk/aws-ecr": "0.0.0",
+    "@aws-cdk/aws-ecr-assets": "0.0.0",
     "@aws-cdk/aws-efs": "0.0.0",
     "@aws-cdk/aws-events": "0.0.0",
     "@aws-cdk/aws-iam": "0.0.0",
@@ -137,13 +141,6 @@
       "docs-public-apis:@aws-cdk/aws-lambda.RuntimeFamily.NODEJS",
       "docs-public-apis:@aws-cdk/aws-lambda.Alias.lambda",
       "docs-public-apis:@aws-cdk/aws-lambda.Alias.fromAliasAttributes",
-      "docs-public-apis:@aws-cdk/aws-lambda.Code",
-      "docs-public-apis:@aws-cdk/aws-lambda.Code.asset",
-      "docs-public-apis:@aws-cdk/aws-lambda.Code.bucket",
-      "docs-public-apis:@aws-cdk/aws-lambda.Code.cfnParameters",
-      "docs-public-apis:@aws-cdk/aws-lambda.Code.fromBucket",
-      "docs-public-apis:@aws-cdk/aws-lambda.Code.fromInline",
-      "docs-public-apis:@aws-cdk/aws-lambda.Code.inline",
       "docs-public-apis:@aws-cdk/aws-lambda.Function.fromFunctionArn",
       "docs-public-apis:@aws-cdk/aws-lambda.FunctionBase",
       "docs-public-apis:@aws-cdk/aws-lambda.QualifiedFunctionBase",
@@ -154,9 +151,6 @@
       "docs-public-apis:@aws-cdk/aws-lambda.AliasAttributes",
       "docs-public-apis:@aws-cdk/aws-lambda.AliasAttributes.aliasName",
       "docs-public-apis:@aws-cdk/aws-lambda.AliasAttributes.aliasVersion",
-      "docs-public-apis:@aws-cdk/aws-lambda.CodeConfig",
-      "props-default-doc:@aws-cdk/aws-lambda.CodeConfig.inlineCode",
-      "props-default-doc:@aws-cdk/aws-lambda.CodeConfig.s3Location",
       "docs-public-apis:@aws-cdk/aws-lambda.EventSourceMappingOptions",
       "props-default-doc:@aws-cdk/aws-lambda.FunctionAttributes.role",
       "props-default-doc:@aws-cdk/aws-lambda.FunctionAttributes.securityGroup",
