--- a/packages/@aws-cdk/aws-mediapackage/package.json
+++ b/packages/@aws-cdk/aws-mediapackage/package.json
@@ -4,6 +4,7 @@
   "description": "The CDK Construct Library for AWS::MediaPackage",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
+  "private": true,
   "jsii": {
     "outdir": "dist",
     "projectReferences": true,
