--- a/packages/aws-cdk/package.json
+++ b/packages/aws-cdk/package.json
@@ -98,6 +98,10 @@
     "aws",
     "cdk"
   ],
+  "bundledDependencies": [
+    "@aws-cdk/yaml-cfn",
+    "@aws-cdk/region-info"
+  ],
   "homepage": "https://github.com/aws/aws-cdk",
   "engines": {
     "node": ">= 10.13.0 <13 || >=13.7.0"
