chore(cdk): bundle cdk-assets as part of the CLI
cdk-assets was missed as part of this prior [commit].

[commit]: https://github.com/aws/aws-cdk/commit/89c5f829b037ec4d6e7f3b508ea6d9ac12925bda

--- a/package.json
+++ b/package.json
@@ -99,6 +99,8 @@
       "aws-cdk/@aws-cdk/region-info/**",
       "aws-cdk/@aws-cdk/yaml-cfn",
       "aws-cdk/@aws-cdk/yaml-cfn/**",
+      "aws-cdk/cdk-assets",
+      "aws-cdk/cdk-assets/**",
       "monocdk/@balena/dockerignore",
       "monocdk/@balena/dockerignore/**",
       "monocdk/case",
