--- a/packages/aws-cdk/package.json
+++ b/packages/aws-cdk/package.json
@@ -100,7 +100,8 @@
   ],
   "bundledDependencies": [
     "@aws-cdk/yaml-cfn",
-    "@aws-cdk/region-info"
+    "@aws-cdk/region-info",
+    "cdk-assets"
   ],
   "homepage": "https://github.com/aws/aws-cdk",
   "engines": {
