fix(bootstrap): specify bucket deletion policy
A DeletionPolicy should be specified to protect the staging bucket

This addresses cfn-lint error:
W3011 Both UpdateReplacePolicy and DeletionPolicy are needed to protect Resources/StagingBucket from deletion

partially fixes: #11545

--- a/packages/aws-cdk/lib/api/bootstrap/bootstrap-template.yaml
+++ b/packages/aws-cdk/lib/api/bootstrap/bootstrap-template.yaml
@@ -167,6 +167,7 @@ Resources:
             RestrictPublicBuckets: true
           - Ref: AWS::NoValue
     UpdateReplacePolicy: Retain
+    DeletionPolicy: Retain
   StagingBucketPolicy:
     Type: 'AWS::S3::BucketPolicy'
     Properties:
