--- a/packages/@aws-cdk/aws-cloudfront/.gitignore
+++ b/packages/@aws-cdk/aws-cloudfront/.gitignore
@@ -15,6 +15,6 @@ nyc.config.js
 !.eslintrc.js
 !jest.config.js
 
-!lib/edge-function/index.js
+!lib/experimental/edge-function/index.js
 
 junit.xml
