chore: update example resource to use Construct from the constructs module
aligning with the migration of constructs to use the "constructs" module
as was done in #10506

--- a/packages/@aws-cdk/example-construct-library/package.json
+++ b/packages/@aws-cdk/example-construct-library/package.json
@@ -99,7 +99,10 @@
     "announce": false
   },
   "cdk-build": {
-    "jest": true
+    "jest": true,
+    "env": {
+      "AWSLINT_BASE_CONSTRUCT": true
+    }
   },
   "ubergen": {
     "exclude": true
