--- a/packages/aws-cdk/lib/init-templates/sample-app/fsharp/src/%name.PascalCased%/%name.PascalCased%.template.fsproj
+++ b/packages/aws-cdk/lib/init-templates/sample-app/fsharp/src/%name.PascalCased%/%name.PascalCased%.template.fsproj
@@ -14,10 +14,7 @@
 
   <ItemGroup>
     <!-- CDK Construct Library dependencies -->
-    <PackageReference Include="Amazon.CDK" Version="%cdk-version%" />
-    <PackageReference Include="Amazon.CDK.AWS.SNS" Version="%cdk-version%" />
-    <PackageReference Include="Amazon.CDK.AWS.SNS.Subscriptions" Version="%cdk-version%" />
-    <PackageReference Include="Amazon.CDK.AWS.SQS" Version="%cdk-version%" />
+    <PackageReference Include="Amazon.CDK.Lib" Version="%cdk-version%" />
 
     <!-- jsii Roslyn analyzers (un-comment to obtain compile-time checks for missing required props
     <PackageReference Include="Amazon.Jsii.Analyzers" Version="*" PrivateAssets="all" />
