remove leftovers from previous iteration

--- a/packages/@aws-cdk/aws-iam/package.json
+++ b/packages/@aws-cdk/aws-iam/package.json
@@ -65,8 +65,7 @@
     "env": {
       "AWSLINT_BASE_CONSTRUCT": "true"
     },
-    "jest": true,
-    "rosetta": "strict"
+    "jest": true
   },
   "keywords": [
     "aws",
