Disable pkglint for @monocdk-experiment/assert

--- a/packages/@monocdk-experiment/assert/package.json
+++ b/packages/@monocdk-experiment/assert/package.json
@@ -27,6 +27,9 @@
       "disable": true
     }
   },
+  "pkglint": {
+    "ignore": true
+  },
   "author": {
     "name": "Amazon Web Services",
     "url": "https://aws.amazon.com",
