--- a/packages/@monocdk-experiment/rewrite-imports/package.json
+++ b/packages/@monocdk-experiment/rewrite-imports/package.json
@@ -11,6 +11,7 @@
     "build": "cdk-build",
     "watch": "cdk-watch",
     "test": "cdk-test",
+    "lint": "cdk-lint",
     "pkglint": "pkglint -f",
     "package": "cdk-package",
     "build+test+package": "npm run build+test && npm run package",
