--- a/tools/cdk-build-tools/tsconfig.json
+++ b/tools/cdk-build-tools/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2018",
     "module": "commonjs",
-    "lib": ["dom", "es2018"],
+    "lib": ["es2018"],
     "strict": true,
     "alwaysStrict": true,
     "declaration": true,
@@ -14,7 +14,6 @@
     "resolveJsonModule": true,
     "composite": true,
     "incremental": true,
-    "importHelpers": true,
   },
   "include": ["**/*.ts"]
 }
