--- a/packages/@aws-cdk/aws-lambda-python/lib/Dockerfile.dependencies
+++ b/packages/@aws-cdk/aws-lambda-python/lib/Dockerfile.dependencies
@@ -6,13 +6,14 @@ FROM $IMAGE
 # Ensure rsync is installed
 RUN yum -q list installed rsync &>/dev/null || yum install -y rsync
 
-# Install pipenv so we can create a requirements.txt if we detect pipfile
-RUN pip install pipenv
+# Install pipenv and poetry so we can create a requirements.txt if we detect pipfile or poetry.lock respectively
+RUN pip install pipenv poetry
 
 # Install the dependencies in a cacheable layer
 WORKDIR /var/dependencies
-COPY Pipfile* requirements.tx[t] ./
+COPY Pipfile* pyproject.toml poetry.lock requirements.tx[t] ./
 RUN [ -f 'Pipfile' ] && pipenv lock -r >requirements.txt; \
+    [[ -f 'pyproject.toml'  && -f 'poetry.lock' ]] && poetry export --with-credentials --format requirements.txt --output requirements.txt; \
     [ -f 'requirements.txt' ] && pip install -r requirements.txt -t .;
 
 CMD [ "python" ]
