--- a/packages/@aws-cdk/aws-lambda-python/lib/Dockerfile.dependencies
+++ b/packages/@aws-cdk/aws-lambda-python/lib/Dockerfile.dependencies
@@ -11,7 +11,7 @@ RUN pip install pipenv poetry
 
 # Install the dependencies in a cacheable layer
 WORKDIR /var/dependencies
-COPY Pipfile* pyproject.toml poetry.lock requirements.tx[t] ./
+COPY Pipfile* pyproject* poetry* requirements.tx[t] ./
 RUN [ -f 'Pipfile' ] && pipenv lock -r >requirements.txt; \
     [ -f 'poetry.lock' ] && poetry export --with-credentials --format requirements.txt --output requirements.txt; \
     [ -f 'requirements.txt' ] && pip install -r requirements.txt -t .;
